# devcontainer-poetry

./: .gitignore  Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
